force-app/main/default/objects/Mateco_Customer_Carte_Status_product__c/Mateco_Customer_Carte_Status_product__c.object-meta.xml
<CustomObject>
    <label>マテコ顧客カルテ_商品</label>
    <nameField>
        <displayFormat>MTP-{0000}</displayFormat>
        <label>マテコ顧客カルテ_商品名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>