force-app/main/default/objects/Mateco_Customer_Carte_Status_product__c/fields/assumption_price__c.field-meta.xml
<CustomField>
    <fullName>assumption_price__c</fullName>
    <label>想定価格</label>
    <length>255</length>
    <type>Text</type>
</CustomField>