force-app/main/default/objects/Mateco_Customer_Carte_Status_product__c/fields/assumption_quantity__c.field-meta.xml
<CustomField>
    <fullName>assumption_quantity__c</fullName>
    <label>想定数量</label>
    <length>255</length>
    <type>Text</type>
</CustomField>