force-app/main/default/objects/Mateco_Customer_Carte_Status_product__c/fields/maker__c.field-meta.xml
<CustomField>
    <fullName>maker__c</fullName>
    <label>メーカー名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>