force-app/main/default/objects/Mateco_Customer_Carte_Status_product__c/fields/note__c.field-meta.xml
<CustomField>
    <fullName>note__c</fullName>
    <label>備考</label>
    <type>TextArea</type>
</CustomField>