force-app/main/default/objects/Mateco_Customer_Carte_Status_product__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <label>商品名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>