force-app/main/default/objects/Mateco_Customer_Carte_Status_product__c/fields/sales_expansion__c.field-meta.xml
<CustomField>
    <fullName>sales_expansion__c</fullName>
    <label>拡販</label>
    <length>255</length>
    <type>Text</type>
</CustomField>