force-app/main/default/objects/Mateco_Customer_Carte_Status_product__c/fields/share__c.field-meta.xml
<CustomField>
    <fullName>share__c</fullName>
    <label>シェア</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>