force-app/main/default/objects/Mateco_Customer_Carte_Status_product__c/fields/supplier__c.field-meta.xml
<CustomField>
    <fullName>supplier__c</fullName>
    <label>仕入先名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>